--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
 	"dependencies": {
 		"firebase": "^4.5.2",
 		"react": "16.0.0-beta.5",
-		"react-native": "0.49.3"
+		"react-native": "0.49.3",
+		"react-native-easy-toast": "^1.0.8",
+		"react-test-renderer": "16.0.0-beta.5"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
 		"eslint-config-rallycoding": "^3.2.0",
-		"jest": "21.2.1",
-		"react-test-renderer": "16.0.0-beta.5"
+		"jest": "21.2.1"
 	},
 	"jest": {
 		"preset": "react-native"
